<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="activity"
            type="com.paran.presentation.views.activity.SignInActivity" />
        <variable
            name="viewModel"
            type="com.paran.presentation.views.viewmodel.SignInActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onTouch="@{(v, e) -> activity.hideKeyboard(v, e)}">

        <TextView
            android:id="@+id/sign_in_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Entrip"
            android:textColor="#48b3ff"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_in_cl_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/vector_sign_in_input_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_logo">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_in_et_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_in_hint_email"
                android:text="@={viewModel.inputEmail}"
                android:inputType="text|textEmailAddress"
                android:paddingStart="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_in_cl_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/vector_sign_in_input_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_cl_email">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sign_in_et_password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:hint="@string/sign_in_hint_password"
                android:text="@={viewModel.inputPassword}"
                android:inputType="text|textPassword"
                android:paddingStart="16dp"
                android:textColor="#000000"
                android:textSize="16dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sign_in_cl_iv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_in_cl_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/sign_in_iv_hide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{activity::onClickHide}"
                    android:src="@drawable/icon_eye_hide"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/sign_in_iv_show"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_eye_show"
                    android:visibility="gone"
                    android:onClick="@{activity::onClickShow}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/sign_in_tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/sign_in_error"
            android:textColor="#FF0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_cl_password"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sign_in_sign_in"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="@drawable/vector_sign_in_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_cl_password"
            android:onClick="@{viewModel::onClickSignUp}"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/vector_sign_up_background"
            android:gravity="center"
            android:text="@string/sign_in_sign_up"
            android:textColor="#48b3ff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn_sign_in"
            android:onClick="@{activity::onClickSignUp}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>